src/snapshots/rust_lexer__lexer__tests__general.snap
---
source: src/lexer.rs
expression: "\n        let five = 5;\n\n        let six=6;\n        let msg = \"HelloWorld!\";\n\n        // this is a comment\n        let x = five + six;\n        "
---
[
  {
    "kind": "LET",
    "literal": "let"
  },
  {
    "kind": {
      "IDENTIFIER": {
        "name": "five"
      }
    },
    "literal": "five"
  },
  {
    "kind": "ASSIGN",
    "literal": "="
  },
  {
    "kind": {
      "INT": 5
    },
    "literal": ""
  },
  {
    "kind": "SEMICOLON",
    "literal": ";"
  },
  {
    "kind": "LET",
    "literal": "let"
  },
  {
    "kind": {
      "IDENTIFIER": {
        "name": "six"
      }
    },
    "literal": "six"
  },
  {
    "kind": "ASSIGN",
    "literal": "="
  },
  {
    "kind": {
      "INT": 6
    },
    "literal": ""
  },
  {
    "kind": "SEMICOLON",
    "literal": ";"
  },
  {
    "kind": "LET",
    "literal": "let"
  },
  {
    "kind": {
      "IDENTIFIER": {
        "name": "msg"
      }
    },
    "literal": "msg"
  },
  {
    "kind": "ASSIGN",
    "literal": "="
  },
  {
    "kind": {
      "STRING": "HelloWorld!"
    },
    "literal": "HelloWorld!"
  },
  {
    "kind": "SEMICOLON",
    "literal": ";"
  },
  {
    "kind": "LET",
    "literal": "let"
  },
  {
    "kind": {
      "IDENTIFIER": {
        "name": "x"
      }
    },
    "literal": "x"
  },
  {
    "kind": "ASSIGN",
    "literal": "="
  },
  {
    "kind": {
      "IDENTIFIER": {
        "name": "five"
      }
    },
    "literal": "five"
  },
  {
    "kind": "PLUS",
    "literal": "+"
  },
  {
    "kind": {
      "IDENTIFIER": {
        "name": "six"
      }
    },
    "literal": "six"
  },
  {
    "kind": "SEMICOLON",
    "literal": ";"
  },
  {
    "kind": "EOF",
    "literal": "\u0000"
  }
]
